--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -650,7 +650,7 @@ config APQ8084_DOCKING_STATION
 	  the QTI APQ8084 Docking Station.
 
 config UID_SYS_STATS
-	tristate "Per-UID statistics"
+	bool "Per-UID statistics"
 	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
