--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -651,7 +651,7 @@ config APQ8084_DOCKING_STATION
 
 config UID_SYS_STATS
 	bool "Per-UID statistics"
-	depends on PROFILING
+	depends on PROFILING && TASK_XACCT && TASK_IO_ACCOUNTING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 	  Per UID based io statistics exported to /proc/uid_io
