--- a/arch/arm/configs/apq8084_sec_defconfig
+++ b/arch/arm/configs/apq8084_sec_defconfig
@@ -749,9 +749,12 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA256_ARM=y
 CONFIG_CRYPTO_SHA512=y
+CONFIG_CRYPTO_SHA512_ARM_NEON=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_XTS=y
