--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -193,4 +193,6 @@ source "drivers/fingerprint/Kconfig"
 source "drivers/sensorhub/Kconfig"
 
 source "drivers/irled/Kconfig"
+
+source "drivers/android/Kconfig"
 endmenu
