--- a/drivers/android/Kconfig
+++ b/drivers/android/Kconfig
@@ -1,3 +1,10 @@
+menu "Android"
+
+config ANDROID
+	bool "Android Drivers"
+	---help---
+	  Enable support for various drivers needed on the Android platform
+
 if ANDROID
 
 config ANDROID_BINDER_IPC
@@ -15,7 +22,7 @@ config ANDROID_BINDER_IPC
 config ANDROID_BINDER_DEVICES
 	string "Android Binder devices"
 	depends on ANDROID_BINDER_IPC
-	default "binder,hwbinder,vndbinder"
+	default "binder"
 	---help---
 	  Default value for the binder.devices parameter.
 
@@ -27,7 +34,7 @@ config ANDROID_BINDER_DEVICES
 config ANDROID_BINDER_IPC_32BIT
 	bool "Use old (Android 4.4 and earlier) 32-bit binder API"
 	depends on !64BIT && ANDROID_BINDER_IPC
-	default n
+	default y
 	---help---
 	  The Binder API has been changed to support both 32 and 64bit
 	  applications in a mixed environment.
@@ -38,3 +45,5 @@ config ANDROID_BINDER_IPC_32BIT
 	  Note that enabling this will break newer Android user-space.
 
 endif # if ANDROID
+
+endmenu
